--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.wear:wear:1.1.0'
+    implementation 'androidx.preference:preference:1.1.1'
     compileOnly 'com.google.android.wearable:wearable:2.8.1'
 }
